Fri Feb  3 18:03:50 CET 2023 <Daniel.Diaz@univ-paris1.fr>

	* extend exec/4-5 to also accept provided streams + null

Fri Dec  9 12:30:56 CET 2023 <Daniel.Diaz@univ-paris1.fr>

	* fix bug in exec/4 under windows (bad stream redirection and child console not hidden)
	* improve fd_prime/1 built-in
	* add show_information Prolog flag (--quiet deactivate it)

Wed Dec  7 11:19:16 CET 2022 <Daniel.Diaz@univ-paris1.fr>

	* add --quiet option to top-level command-line (do not display banner and info)
	* add Prolog flag show_information (on/off)

Mon Dec  5 15:36:38 CET 2022 <Daniel.Diaz@univ-paris1.fr>

	* add new prefedined stream aliases (current_input, current_output)
	* add new built-in to reassign a stream alias (set_stream_alias/2)

Wed Mar  9 17:41:41 CET 2022 <Daniel.Diaz@univ-paris1.fr>

	* fix issue #23: add built-in predicate copy_file/2

Fri Mar  4 16:42:00 CET 2022 <Daniel.Diaz@univ-paris1.fr>

	* fix issue #10: missing int_overflow
	* fix issue #22: math evaluation raises a float_overflow instead of int_overflow
	* fix issue #21: bug in append/3
	* port to RISC-V 64 bits/Linux - many thanks to
	  Jasper Taylor <jasper@simulistics.com>

Thu Feb 24 16:27:00 CET 2022 <Daniel.Diaz@univ-paris1.fr>

	* fix issue #20: length(L, L) raises an error instead of crashing (related to pr #19)

Thu Feb 24 11:55:00 CET 2022 <Daniel.Diaz@univ-paris1.fr>

	* fix issue #17: CTRL+C as first action under top-level causes a segmentation fault
	* modify length/2 to make length(L, L) fail if the strict_iso flag is off (related to pr #19)
	* fix asm problems on macos/M1 with large sources (mapper arm64_any.c)
	* fix issue #4: directory_files/2 now uses native Win32 functions
	* fix small problem when bootstrapping due to Makefiles
	* fix format/2-3 to throw a domain error on invalid radix (pr #16)

Fri Dec  3 02:42:24 CET 2021 <Daniel.Diaz@univ-paris1.fr>

	* fix issue #9: format/2-3 now also accept a list of character for format
