@@ -1,3 +1,7 @@
+Fri Feb 17 11:08:35 CET 2023 <Daniel.Diaz@univ-paris1.fr>
+
+	* increase default Prolog stack sizes and MAX_ATOMS
+
 Fri Feb  3 18:03:50 CET 2023 <Daniel.Diaz@univ-paris1.fr>
 
 	* extend exec/4-5 to also accept provided streams + null
